# instadownloader_bot

./: .env  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
app/: main.py
app/routers/: download.py  router.py
app/schemas/: __init__.py
app/services/: service.py
app/utils/: cleaner.py
bot/: __init__.py  config.py  main.py
bot/database/: __init__.py
bot/database/models/: __init__.py  base.py  users.py
bot/handlers/: __init__.py  handler.py
bot/root/: db_config.py
bot/src/db/models/: __init__.py  base.py  users.py
bot/src/handlers/: message_handler.py
root/: __init__.py
src/db/mixins/: __init__.py  base.py
src/db/models/: base.py  users.py
src/db/sessions/: async_session.py
src/handlers/: message_handler.py
